--- a/vawc-deskhub/index.html
+++ b/vawc-deskhub/index.html
@@ -16,7 +16,7 @@
     />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vawc-deskhub</title>
+    <title>VAWC DeskHub</title>
   </head>
   <body>
     <div id="root"></div>
